--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="placeat">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MojaPWA</title>
     <link rel="stylesheet" href="style.css">
+
+    <meta name="theme-color" content="#730000">
 </head>
 <body>
     <header>
@@ -29,6 +31,7 @@
                     <h3>Przepraszam za brak obs³ugi polskich znaków</h3>
                     <p>niestety coœ mi nie dzia³a i nie wiem jak to naprawiæ</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia similique atque consectetur est corporis neque distinctio dolorum, iusto ullam ab, facere maiores? Quia necessitatibus commodi nihil modi neque, sunt at nemo fugit quam voluptas ea vero deleniti! Molestiae maiores repellat, beatae quaerat ad rerum assumenda molestias placeat nulla officia debitis impedit atque? Minus dicta, assumenda alias, dignissimos, fuga voluptate ex doloremque vero exercitationem laborum itaque? Sunt voluptatibus voluptatum illo doloremque corporis error enim officia, eius aut at veniam rem voluptatem expedita quibusdam, veritatis consectetur, neque tempore. Architecto ab maiores minima quia laborum quas asperiores possimus. Vero omnis iure necessitatibus quis!</p>
+                    <img src="./img/polska.jpg" alt="polska flaga">
                 </div>
             </div>
         </section>
