modified:   index.html

--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
 <body>
     <header>
         <div>
-            <h1>Durny pos¹g</h1>
+            <h1>Durny posï¿½g</h1>
             <h2>Zobacz jaki brzydki ahahaha</h2>
         </div>
-        <a href="#main">Zobacz wiêcej</a>
+        <a href="#main">Zobacz wiï¿½cej</a>
     </header>
     <main id="main">
         <section class="sekcja">
             <h2>Fajne rzeczy</h2>
             <div>
                 <div class="single_method">
-                    <h3>Ludzie w USA strzelaj¹ do siebie</h3>
-                    <p>i s¹ z tego dumni</p>
+                    <h3>Ludzie w USA strzelajï¿½ do siebie</h3>
+                    <p>i sï¿½ z tego dumni</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur iure labore explicabo in unde sapiente, neque voluptatum provident, aspernatur dolor architecto nostrum facilis minima incidunt qui sunt, ad ipsam itaque?</p>
                     <img src="./img/usa.jpg" alt="pistolety">
                 </div>
                 <div class="single_method">
-                    <h3>Przepraszam za brak obs³ugi polskich znaków</h3>
-                    <p>niestety coœ mi nie dzia³a i nie wiem jak to naprawiæ</p>
+                    <h3>Przepraszam za brak obsï¿½ugi polskich znakï¿½w</h3>
+                    <p>niestety coï¿½ mi nie dziaï¿½a i nie wiem jak to naprawiï¿½</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia similique atque consectetur est corporis neque distinctio dolorum, iusto ullam ab, facere maiores? Quia necessitatibus commodi nihil modi neque, sunt at nemo fugit quam voluptas ea vero deleniti! Molestiae maiores repellat, beatae quaerat ad rerum assumenda molestias placeat nulla officia debitis impedit atque? Minus dicta, assumenda alias, dignissimos, fuga voluptate ex doloremque vero exercitationem laborum itaque? Sunt voluptatibus voluptatum illo doloremque corporis error enim officia, eius aut at veniam rem voluptatem expedita quibusdam, veritatis consectetur, neque tempore. Architecto ab maiores minima quia laborum quas asperiores possimus. Vero omnis iure necessitatibus quis!</p>
                     <img src="./img/polska.jpg" alt="polska flaga">
                 </div>
